<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ajford-ExpenseTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_travelclaim_list">Travel Claims</string>
    <string name="title_travelclaim_detail">Travel Claim Detail</string>
    <string name="newTravelClaim">New Travel Claim</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="hint_description">Description (e.g, destination and reason for travel)</string>
    <string name="label_expenseItems">Expense Items</string>
    <string name="label_addExpenseClaim">Add Expense Claim</string>
    <string name="title_activity_new_expense_item">New Expense Item</string>
    <string name="label_expense_item_date">Date</string>
    <string name="label_category">Category</string>
    <string name="hint_expense_item_description">Description</string>
    <string name="title_save">Save</string>
    <string name="title_cancel">Cancel</string>

</resources>
