<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context="cmput301.ajford.expense_tracker.activities.NewExpenseItemDialogFragment" >

    <EditText
        android:id="@+id/travel_claim_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/hint_expense_item_description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/travel_claim_description"
        android:ems="10"
        android:hint="@string/label_expense_item_date"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="false"
        android:layout_below="@id/date"
        android:prompt="@string/label_category" />

    <EditText
        android:id="@+id/expense_item_amount_spent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/categorySpinner"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/expense_item_amount_spent"
        android:layout_alignTop="@+id/expense_item_amount_spent"
        android:layout_toRightOf="@+id/expense_item_amount_spent" />

</RelativeLayout>