<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context="cmput301.ajford.expense_tracker.fragments.NewExpenseItemDialogFragment" >

    <EditText
        android:id="@+id/travel_claim_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/hint_expense_item_description"
        android:inputType="textMultiLine">
        
       <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/date_expense_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/travel_claim_description"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/label_expense_item_date"
        android:inputType="date" 
        android:onClick="showDatePickerDialog" >
    </EditText>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="false"
        android:layout_below="@id/date_expense_list_item"
        android:prompt="@string/label_category" />

    <EditText
        android:id="@+id/amount_spent_list_expense_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/categorySpinner"
        android:ems="10"
        android:inputType="numberDecimal"
        android:gravity="right"
        android:text="0.00" />

    <Spinner
        android:id="@+id/currency_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/amount_spent_list_expense_item"
        android:layout_alignTop="@+id/amount_spent_list_expense_item"
        android:layout_toRightOf="@+id/amount_spent_list_expense_item" />

</RelativeLayout>